# python-rss-keyword-filter

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml  requirements.txt
rss_filter/: __init__.py  cli.py  config.py  feed.py
rss_filter/server/: cache.py  routes.py  server.py
tests/: test_attribution.py  test_feed.py  test_large_feed_performance.py  test_rss_validity.py
tests/fixtures/: sample_feed.xml
